src/patternfly/components/Toolbar/toolbar.scss
/* ... */
// - Toolbar content section - Toolbar group - Toolbar item
.#{$toolbar}__content-section,
.#{$toolbar}__group,
.#{$toolbar}__item {
  @include pf-v6-hidden-visible(flex);
}

// - Toolbar - Toolbar content
.#{$toolbar},
.#{$toolbar}__content {
  position: relative;
}

// - Toolbar content - Toolbar content section - Toolbar expandable content
.#{$toolbar}__content {
  @include pf-v6-hidden-visible(grid);

  row-gap: var(--#{$toolbar}__content--RowGap);
  padding-inline-start: var(--#{$toolbar}__content--PaddingInlineStart);
  padding-inline-end: var(--#{$toolbar}__content--PaddingInlineEnd);
}

// Toolbar content section
.#{$toolbar}__content-section {
  flex-wrap: wrap;
  row-gap: var(--#{$toolbar}__content-section--RowGap);
  column-gap: var(--#{$toolbar}__content-section--ColumnGap);
  align-items: start;
}

// - Toolbar
.#{$toolbar} {
  display: grid;
  row-gap: var(--#{$toolbar}--RowGap);
  width: var(--#{$toolbar}--Width, auto);
  padding-block-start: var(--#{$toolbar}--PaddingBlockStart);
  padding-block-end: var(--#{$toolbar}--PaddingBlockEnd);
  padding-inline-start: var(--#{$toolbar}--PaddingInlineStart);
  padding-inline-end: var(--#{$toolbar}--PaddingInlineEnd);
  font-size: var(--#{$toolbar}--FontSize);
  line-height: var(--#{$toolbar}--LineHeight);
  background-color: var(--#{$toolbar}--BackgroundColor);

  // - Toolbar sticky
  &.pf-m-sticky {
    --#{$toolbar}--BackgroundColor: var(--#{$toolbar}--m-sticky--BackgroundColor);

    position: sticky;
    inset-block-start: 0;
    z-index: var(--#{$toolbar}--m-sticky--ZIndex);
    padding-block-start: var(--#{$toolbar}--m-sticky--PaddingBlockStart);
    padding-block-end: var(--#{$toolbar}--m-sticky--PaddingBlockEnd);
    box-shadow: var(--#{$toolbar}--m-sticky--BoxShadow);
  }

  //  - Toolbar static
  &.pf-m-static {
    &,
    .#{$toolbar}__content {
      position: static;
    }

    .#{$toolbar}__expandable-content {
      position: absolute;
    }
  }

  // - Toolbar full height
  &.pf-m-full-height {
    --#{$toolbar}--PaddingBlockStart: 0;
    --#{$toolbar}--PaddingBlockEnd: 0;

    .#{$toolbar}__group,
    .#{$toolbar}__item {
      align-items: stretch;
      align-self: stretch;
    }
  }

  &.pf-m-no-padding {
    --#{$toolbar}--PaddingBlockEnd: 0;
    --#{$toolbar}--m-sticky--PaddingBlockStart: 0;
    --#{$toolbar}--m-sticky--PaddingBlockEnd: 0;
  }

  // - Toolbar background modifiers
  &.pf-m-primary {
    --#{$toolbar}--BackgroundColor: var(--#{$toolbar}--m-primary--BackgroundColor);
  }

  &.pf-m-secondary {
    --#{$toolbar}--BackgroundColor: var(--#{$toolbar}--m-secondary--BackgroundColor);
  }

  &.pf-m-no-background {
    --#{$toolbar}--BackgroundColor: var(--#{$toolbar}--m-no-background--BackgroundColor);
  }

  // @include resize-observer-placeholder('md') {
  //   do resize observer things here
  // }
}

// - Toolbar item
.#{$toolbar}__item {
  @include pf-v6-build-css-variable-stack("--#{$toolbar}__item--Width--base", "--#{$toolbar}__item--Width", $pf-v6-c-toolbar--breakpoint-map);
  @include pf-v6-build-css-variable-stack("--#{$toolbar}__item--MinWidth--base", "--#{$toolbar}__item--MinWidth", $pf-v6-c-toolbar--breakpoint-map);

  row-gap: var(--#{$toolbar}__item--RowGap);
  column-gap: var(--#{$toolbar}__item--ColumnGap);
  width: var(--#{$toolbar}__item--Width--base);
  min-width: var(--#{$toolbar}__item--MinWidth--base);

  // - Toolbar expand
  &.pf-m-expand-all.pf-m-expanded {
    --#{$toolbar}__expand-all-icon--Rotate: var(--#{$toolbar}__item--m-expand-all--m-expanded__expand-all-icon--Rotate);
  }

  // - Toolbar label
  &.pf-m-label {
    font-weight: var(--#{$toolbar}__item--m-label--FontWeight);
  }

  // - Toolbar pagination
  &.pf-m-pagination {
    margin-inline-start: auto;

    &.#{$pagination} {
      flex-wrap: nowrap;
    }
  }

  &.pf-m-overflow-container {
    min-width: var(--#{$toolbar}__item--m-overflow-container--MinWidth);
  }
}

// - Toolbar group
.#{$toolbar}__group {
  row-gap: var(--#{$toolbar}__group--RowGap);
  column-gap: var(--#{$toolbar}__group--ColumnGap);

  // - Toolbar filter group
  &.pf-m-filter-group {
    column-gap: var(--#{$toolbar}__group--m-filter-group--ColumnGap);
  }

  // - Toolbar label group
  &.pf-m-label-group {
    flex: 1;
    flex-wrap: wrap;
    column-gap: var(--#{$toolbar}__group--m-label-group--ColumnGap);
  }

  // - Toolbar action group
  &.pf-m-action-group {
    column-gap: var(--#{$toolbar}__group--m-action-group--ColumnGap);
  }

  // - Toolbar action group plain
  &.pf-m-action-group-plain {
    column-gap: var(--#{$toolbar}__group--m-action-group-plain--ColumnGap);
  }

  // - Toolbar action group inline
  &.pf-m-action-group-inline {
    flex-wrap: wrap;
    column-gap: var(--#{$toolbar}__group--m-action-group-inline--ColumnGap);
  }

  // - Toolbar overflow container
  &.pf-m-overflow-container {
    min-width: var(--#{$toolbar}__group--m-overflow-container--MinWidth);
  }
}
/* ... */

